welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:2: error: Missing closing brace `}' assumed here
override def run() {
^MethodsPicture:2: error: expected start of definition
override def run() {
         ^MethodsPicture:4: error: Missing closing brace `}' assumed here
	for (ligne <-1 to 3){
        ^MethodsPicture:5: error: Missing closing brace `}' assumed here
	{faireV(c:YELLOW);
        ^